# myhome

./: .gitignore  .openapi-generator-ignore  .pre-commit-config.yaml  .yamllint  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
.openapi-generator/: FILES
contrib/: .openapi_codegen_docs.yml  .openapi_codegen_python.yml  generate_apidocs.sh  generate_client.sh  generator_common.sh  openapi.yml
doc/: analysis_setup.md  api.md
doc/api/: README.md
doc/api/Apis/: DefaultApi.md
doc/api/Models/: Action.md  Event.md  GetActualUserResponse.md  GetRoleUserResponse.md  InitCheckResponse.md  LoginRequest.md  LoginResponse.md  ObjectInfo.md  ObjectValue.md  ObjectValueDimmer.md  ObjectValueLight.md  ObjectValueShutter.md  ObjectValueThermostat.md  Room.md  SerialServer.md  SetObjectValueRequest.md  SetObjectValueResponse.md  SpecificObjectRequest.md  SystemInfo.md  Zone.md
myhome/: __init__.py  _aioadapter.py  client.py  exception.py
myhome/_gen/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
myhome/_gen/api/: __init__.py  default_api.py
myhome/_gen/apis/: __init__.py
myhome/_gen/model/: access_status.py  action.py  action_list.py  event.py  get_actual_user_response.py  get_role_user_response.py  init_check_response.py  login_request.py  login_response.py  object_info.py  object_list.py  object_value.py  object_value_dimmer.py  object_value_fancoil.py  object_value_light.py  object_value_shutter.py  object_value_thermostat.py  object_value_towel_warmer.py  room.py  room_list.py  serial_server.py  set_object_value_request.py  set_object_value_response.py  specific_object_request.py  system_info.py  zone.py  zone_list.py
myhome/_gen/models/: __init__.py  access_status.py  action.py  event.py  get_actual_user_response.py  get_role_user_response.py  init_check_response.py  login_request.py  login_response.py  object_info.py  object_value.py  object_value_dimmer.py  object_value_light.py  object_value_shutter.py  object_value_thermostat.py  room.py  serial_server.py  set_object_value_request.py  set_object_value_response.py  specific_object_request.py  system_info.py  zone.py
myhome/_gen/test/: test_access_status.py  test_action.py  test_action_list.py  test_default_api.py  test_event.py  test_get_actual_user_response.py  test_get_role_user_response.py  test_init_check_response.py  (+18 more)
myhome/object/: __init__.py  base.py  fancoil.py  light.py  shutter.py  thermostat.py  towel_warmer.py
tests/_gen/: test_access_status.py  test_action.py  test_action_list.py  test_default_api.py  test_event.py  test_get_actual_user_response.py  test_get_role_user_response.py  test_init_check_response.py  test_login_request.py  test_login_response.py  test_object_info.py  test_object_list.py  test_object_value.py  test_object_value_dimmer.py  test_object_value_fancoil.py  test_object_value_light.py  test_object_value_shutter.py  test_object_value_thermostat.py  test_object_value_towel_warmer.py  test_room.py  test_room_list.py  test_serial_server.py  test_set_object_value_request.py  test_set_object_value_response.py  test_specific_object_request.py  test_system_info.py  test_zone.py  test_zone_list.py
