[tool.poetry]
name = "myhome"
version = "0.1.0"
description = "Python client library for interacting with Bticino MMYHOMESERVER1"
authors = ["Stephan Peijnik-Steinwender <speijnik@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"
click = "^7.1.2"
upnpclient = {version = "^1.0.3", extras = ["autodiscovery"]}
nulltype = "^2.3.1"
urllib3 = "^1.26.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38"]
exclude = 'myhome/gen'

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "myhome",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true
