[tool.poetry]
name = "myhome"
version = "0.3.0"
description = "Python client library for interacting with Bticino MyHomeSERVER1"
readme = "README.md"
repository = "https://github.com/speijnik/myhome"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Home Automation"
]
authors = ["Stephan Peijnik-Steinwender <speijnik@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.14.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
urllib3 = "^1.26.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38"]
exclude = 'myhome/gen'

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "myhome",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true
